fix modal layout on small screens

--- a/app/styles/modules/_m-reveal-modal.scss
+++ b/app/styles/modules/_m-reveal-modal.scss
@@ -3,7 +3,11 @@
 // --------------------------------------------------
 
 .reveal-overlay {
-  position: absolute;
+  padding: 1rem;
+
+  @include breakpoint(medium) {
+    position: absolute;
+  }
 }
 
 .reveal {
